--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "type": "git",
     "url": "https://github.com/kaylaiueo/netai"
   },
-  "keywords": ["social-media", "sharing-photos"],
+  "keywords": [
+    "social-media",
+    "sharing-photos"
+  ],
   "author": "kaylaiueo",
   "license": "MIT",
   "bugs": {
@@ -21,6 +24,7 @@
   "homepage": "https://netai.vercel.app/",
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@tanstack/react-query": "^5.8.4",
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
@@ -39,7 +43,6 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
-    "swr": "^2.2.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.22.2"
